fix: delete the horizontal scroll on homepage

--- a/src/app/layouts/Home.module.css
+++ b/src/app/layouts/Home.module.css
@@ -7,7 +7,7 @@
 .bodyContainer {
 	display: flex;
 	width: 100%;
-	/* height: 80%; */
+	height: calc(100vh - 100px);
 	flex-grow: 1;
 	background-color: aqua;
 }
